--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
 asgiref==3.3.4
+certifi==2020.12.5
+chardet==4.0.0
 Django==3.2.2
 gunicorn==20.1.0
-pytz==2021.1
-sqlparse==0.4.1
+idna==2.10
 psycopg2-binary==2.8.6
+pytz==2021.1
+requests==2.25.1
+sqlparse==0.4.1
+urllib3==1.26.4
